updating notebook with day 1 work

--- a/classes/01/notebooks/python-iteration_control_functions-lesson/iteration-control-flows-functions.ipynb
+++ b/classes/01/notebooks/python-iteration_control_functions-lesson/iteration-control-flows-functions.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How many pounds does your suitcase weigh? 70\n"
+      "How many pounds does your suitcase weigh? 60\n"
      ]
     }
    ],
@@ -88,13 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# A:"
+    "if weight > 50 :\n",
+    "    print \"Suitcase is over 50 lbs\"\n",
+    "else:\n",
+    "    print \"Suitcase is under 50 lbs\"\n"
    ]
   },
   {
@@ -115,20 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is the temperature? 100\n",
-      "What is the weather? (rain or shine) shine\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temperature = float(input('What is the temperature? '))\n",
     "weather = raw_input('What is the weather? (rain or shine) ')"
@@ -136,13 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# A:"
+    "if temperature > 60 :\n",
+    "    if weather == \"rain\" :\n",
+    "        print \"Bring an umbrella\"\n",
+    "    else:\n",
+    "        print \"Wear a T-shirt\"\n",
+    "elif  temperature <= 60 :\n",
+    "    if  weather == \"rain\" :\n",
+    "        print \"Bring an umbrella and a jacket\"\n",
+    "    else:\n",
+    "        print \"Bring a jacket\"\n",
+    "else:\n",
+    "    \"Bad input\""
    ]
   },
   {
@@ -161,13 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# A:"
+    "for i in range(1, 16):\n",
+    "    print i"
    ]
   },
   {
@@ -189,13 +195,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: odd\n",
+      "2: even\n",
+      "3: odd\n",
+      "4: even\n",
+      "5: odd\n",
+      "6: even\n",
+      "7: odd\n",
+      "8: even\n",
+      "9: odd\n",
+      "10: even\n",
+      "11: odd\n",
+      "12: even\n",
+      "13: odd\n",
+      "14: even\n",
+      "15: odd\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "for i in range(1, 16):\n",
+    "    if i % 2 == 0:\n",
+    "        print str(i) + \": even\"\n",
+    "    else:\n",
+    "        print str(i) + \": odd\""
    ]
   },
   {
@@ -218,9 +250,55 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "2 \n",
+      "fizz\n",
+      "4 \n",
+      "buzz\n",
+      "fizz\n",
+      "7 \n",
+      "8 \n",
+      "fizz\n",
+      "buzz\n",
+      "11 \n",
+      "fizz\n",
+      "13 \n",
+      "14 \n",
+      "fizzbuzz\n",
+      "16 \n",
+      "17 \n",
+      "fizz\n",
+      "19 \n",
+      "buzz\n",
+      "fizz\n",
+      "22 \n",
+      "23 \n",
+      "fizz\n",
+      "buzz\n",
+      "26 \n",
+      "fizz\n",
+      "28 \n",
+      "29 \n",
+      "fizzbuzz\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "for i in range(1, 31):\n",
+    "    string = \"\"\n",
+    "    if( i % 3 == 0 ):\n",
+    "         string += \"fizz\"\n",
+    "    if ( i % 5 == 0 ):\n",
+    "        string += \"buzz\"\n",
+    "    if ( i % 3 != 0 and i % 5 != 0):\n",
+    "        string += str(i) + \" \"\n",
+    "    \n",
+    "    print string"
    ]
   },
   {
@@ -234,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -245,13 +323,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DUCK\n",
+      "RAT\n",
+      "BOAR\n",
+      "SLUG\n",
+      "MAMMOTH\n",
+      "GAZELLE\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "for animal in animals:\n",
+    "    print animal.upper()"
    ]
   },
   {
@@ -265,13 +357,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Duck', 'Rat', 'Boar', 'Slug', 'Mammoth', 'Gazelle']\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "new_animals = []\n",
+    "for animal in animals:\n",
+    "    new_animals.append(animal.capitalize())\n",
+    "    \n",
+    "print new_animals"
    ]
   },
   {
@@ -286,13 +390,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "duck : 1\n",
+      "rat : 1\n",
+      "boar : 2\n",
+      "slug : 1\n",
+      "mammoth : 2\n",
+      "gazelle : 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "vowels = ['a', 'e', 'i', 'o', 'u']\n",
+    "vowels2 = 'aeiou'\n",
+    "for animal in animals:\n",
+    "    count = 0;\n",
+    "    for vowel in vowels2 :\n",
+    "        count += animal.lower().count(vowel)\n",
+    "    print animal + \" :\" ,  count"
    ]
   },
   {
@@ -311,13 +434,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "def vowel_count(word):\n",
+    "    vowels = ['a', 'e', 'i', 'o', 'u']\n",
+    "    count = 0;\n",
+    "    for vowel in vowels :\n",
+    "        count += word.lower().count(vowel)\n",
+    "    return count   \n",
+    "\n",
+    "print vowel_count(\"xyz\")\n",
+    "print vowel_count(\"Aello\")\n",
+    "print vowel_count(\"uh oh\")"
    ]
   },
   {
@@ -333,13 +475,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.5\n",
+      "2.5\n",
+      "250.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "def triangle_area(height, width):\n",
+    "    return height * width /2.0\n",
+    "\n",
+    "print triangle_area (5, 5)\n",
+    "print triangle_area (1, 5)\n",
+    "print triangle_area (100, 5)\n"
    ]
   },
   {
@@ -358,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -369,13 +526,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27778\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "iterations = 0\n",
+    "sum = 0\n",
+    "while sum < 1000000:\n",
+    "    sum += vowel_count(sentence)\n",
+    "    iterations += 1\n",
+    "\n",
+    "print iterations;"
    ]
   },
   {
@@ -391,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -402,13 +573,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23.1, 0.12, -11.1, 1000.0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# A:"
+    "# A:\n",
+    "float_nums = []\n",
+    "for string in corrupted:\n",
+    "    try:\n",
+    "        float_num = float(string)\n",
+    "        float_nums.append(float_num)\n",
+    "    except ValueError:\n",
+    "        continue\n",
+    "print float_nums\n",
+    "    "
    ]
   },
   {
@@ -774,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
