Update w/ project1 work

--- a/classes/04/notebooks/pandas-grouping-lesson/practice-pandas-grouping.ipynb
+++ b/classes/04/notebooks/pandas-grouping-lesson/practice-pandas-grouping.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -53,13 +53,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Colors Reported</th>\n",
+       "      <th>Shape Reported</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ithaca</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TRIANGLE</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>6/1/1930 22:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Willingboro</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>6/30/1930 20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Holyoke</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OVAL</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>2/15/1931 14:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abilene</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DISK</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>6/1/1931 13:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>New York Worlds Fair</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LIGHT</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>4/18/1933 19:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   City Colors Reported Shape Reported State             Time\n",
+       "0                Ithaca             NaN       TRIANGLE    NY   6/1/1930 22:00\n",
+       "1           Willingboro             NaN          OTHER    NJ  6/30/1930 20:00\n",
+       "2               Holyoke             NaN           OVAL    CO  2/15/1931 14:00\n",
+       "3               Abilene             NaN           DISK    KS   6/1/1931 13:00\n",
+       "4  New York Worlds Fair             NaN          LIGHT    NY  4/18/1933 19:00"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A:"
+    "# A:\n",
+    "ufo = pd.read_csv(ufo_csv)\n",
+    "ufo.head()"
    ]
   },
   {
@@ -71,13 +147,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City                  47\n",
+       "Colors Reported    63509\n",
+       "Shape Reported      8402\n",
+       "State                  0\n",
+       "Time                   0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A:"
+    "# A:\n",
+    "ufo.isnull().sum()"
    ]
   },
   {
@@ -89,13 +182,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "Seattle          646\n",
+       "New York City    612\n",
+       "Phoenix          533\n",
+       "Las Vegas        442\n",
+       "Portland         438\n",
+       "Los Angeles      416\n",
+       "San Diego        401\n",
+       "Houston          340\n",
+       "Chicago          337\n",
+       "Miami            279\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A:"
+    "# A:\n",
+    "ufo.groupby([\"City\"]).size().sort_values(ascending=False).head(10)\n",
+    "\n"
    ]
   },
   {
@@ -107,13 +224,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Shape Reported\n",
+       "CHEVRON        940\n",
+       "CIGAR         1983\n",
+       "CIRCLE        7725\n",
+       "CONE           310\n",
+       "CRESCENT         2\n",
+       "CROSS          241\n",
+       "CYLINDER      1252\n",
+       "DELTA            7\n",
+       "DIAMOND       1152\n",
+       "DISK          5226\n",
+       "DOME             1\n",
+       "EGG            733\n",
+       "FIREBALL      6249\n",
+       "FLARE            1\n",
+       "FLASH         1329\n",
+       "FORMATION     2405\n",
+       "HEXAGON          1\n",
+       "LIGHT        16332\n",
+       "OTHER         5506\n",
+       "OVAL          3721\n",
+       "PYRAMID          1\n",
+       "RECTANGLE     1295\n",
+       "ROUND            2\n",
+       "SPHERE        5231\n",
+       "TEARDROP       723\n",
+       "TRIANGLE      7816\n",
+       "VARIOUS       1957\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A:"
+    "# A:\n",
+    "ufo.groupby([\"Shape Reported\"]).size()"
    ]
   },
   {
@@ -125,13 +282,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Shape Reported</th>\n",
+       "      <th>counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10778</th>\n",
+       "      <td>Seattle</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8277</th>\n",
+       "      <td>New York City</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9330</th>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6412</th>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9647</th>\n",
+       "      <td>Portland</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LIGHT</td>\n",
+       "      <td>16332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TRIANGLE</td>\n",
+       "      <td>7816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CIRCLE</td>\n",
+       "      <td>7725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FIREBALL</td>\n",
+       "      <td>6249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>5506</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                City Shape Reported  counts\n",
+       "10778        Seattle            NaN     646\n",
+       "8277   New York City            NaN     612\n",
+       "9330         Phoenix            NaN     533\n",
+       "6412       Las Vegas            NaN     442\n",
+       "9647        Portland            NaN     438\n",
+       "17               NaN          LIGHT   16332\n",
+       "25               NaN       TRIANGLE    7816\n",
+       "2                NaN         CIRCLE    7725\n",
+       "12               NaN       FIREBALL    6249\n",
+       "18               NaN          OTHER    5506"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A:"
+    "# A:\n",
+    "top_cities = ufo.groupby([\"City\"]).size().reset_index(name='counts').sort_values(\"counts\", ascending=False).head(5)\n",
+    "top_shapes = ufo.groupby([\"Shape Reported\"]).size().reset_index(name='counts').sort_values(\"counts\", ascending=False).head(5)\n",
+    "\n",
+    "top_cities_shapes = pd.concat([top_cities,top_shapes ])\n",
+    "top_cities_shapes"
    ]
   },
   {
