--- a/classes/05/extra-work/python-list_comprehensions-lesson/list-dictionary-comprehensions.ipynb
+++ b/classes/05/extra-work/python-list_comprehensions-lesson/list-dictionary-comprehensions.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -44,21 +44,49 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers = [0,1,2,3,4,5,6,7,8,9]\n",
-    "# for-loop version:"
+    "# for-loop version:\n",
+    "numbers_plus_one = []\n",
+    "for number in numbers:\n",
+    "    numbers_plus_one.append(number+1)\n",
+    "    \n",
+    "numbers_plus_one"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# list comprehension version"
+    "# list comprehension version\n",
+    "[number + 1 for number in numbers]"
    ]
   },
   {
@@ -74,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -85,24 +113,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# for loop"
+    "# for loop\n",
+    "\n",
+    "mean = np.mean(n)\n",
+    "binarized = []\n",
+    "for i in n:\n",
+    "    if i >= mean:\n",
+    "        binarized.append(1)\n",
+    "    else:\n",
+    "        binarized.append(0)\n",
+    "\n",
+    "binarized"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.6666666667\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# list comprehension"
+    "# list comprehension\n",
+    "mean = np.mean(n)\n",
+    "print mean\n",
+    "binarize_n = [1 if i >= mean else 0 for i in n]\n",
+    "binarize_n"
    ]
   },
   {
@@ -114,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -136,13 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 0, 'None', 'None', 'None', 'None', 0, 1]\n",
+      "[1, 0, 1, 0, 0, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# list comprehension"
+    "# list comprehension\n",
+    "\n",
+    "print [\"None\" if i > 1 else abs(i-1) for i in n]\n",
+    "print [np.abs(i-1) for i in n if i in [1, 0]]"
    ]
   },
   {
@@ -202,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -272,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -284,13 +367,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['a', 'z'], ['b', 'y'], ['c', 'x'], ['d', 'w']]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# list comprehension"
+    "# list comprehension\n",
+    "\n",
+    "[[a[idx], z[idx]] for idx in range(4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 'z'), ('b', 'y'), ('c', 'x'), ('d', 'w')]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip(a, z)"
    ]
   },
   {
