--- a/classes/03/notebooks/codealong-03-exploratory-data-analysis-starter-code.ipynb
+++ b/classes/03/notebooks/codealong-03-exploratory-data-analysis-starter-code.ipynb
@@ -920,7 +920,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "corr = df.corr()\n",
@@ -949,7 +951,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.heatmap(corr)"
@@ -994,7 +998,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.pairplot(df[['Beds', 'Baths']].dropna())"
@@ -1003,7 +1009,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.pairplot(df[['SalePrice', 'Size']].dropna())"
@@ -1012,7 +1020,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.pairplot(df.dropna())"
@@ -1117,9 +1127,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ds42)",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "ds42"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1131,7 +1141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
