--- a/unit-project/project-1/starter-code/project1-starter.ipynb
+++ b/unit-project/project-1/starter-code/project1-starter.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: "
+    "Answer: Determine whether a customer will likely convert to paying customer"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: "
+    "Answer: age, gender, location, profession, usage data"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: "
+    "Answer: Jan 2015 to Apr 2015"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: "
+    "Answer: Demographic data and usage data will allow us to determine whether a customer will likely pay for the service"
    ]
   },
   {
@@ -95,8 +95,10 @@
     "\n",
     "Variable | Description | Type of Variable\n",
     "---| ---| ---\n",
-    "Var 1 | 0 = not thing 1 = thing | categorical\n",
-    "Var 2 | thing in unit X | continuous \n"
+    "admit | 0 = not admitted, 1 = admitted | categorical\n",
+    "gre | GRE score | continuous \n",
+    "gpa | Grade Point Average | continuous\n",
+    "prestige | rank value from 1 (highest) to 4 (lowest) of candidate's alma mater's prestige | continuous\n"
    ]
   },
   {
@@ -117,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: Determine whether a candidate will likely be admitted "
    ]
   },
   {
@@ -131,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: GRE score, GPA, prestige of alma mater"
    ]
   },
   {
@@ -145,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: Not relevant"
    ]
   },
   {
@@ -159,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: GPA, GRE, and prestige of alma mater will allow us to predict whether a candidate will be admitted to UCLA "
    ]
   },
   {
@@ -203,7 +205,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: "
+    "Answer: Determine if there are any cleaning we need to do to the data, detect any aberrations in the data or any outliers that may skew our analysis."
    ]
   },
   {
@@ -217,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: "
    ]
   },
   {
@@ -233,7 +235,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: "
+    "Answer: Generate a histogram on gpa, gre, prestige, and admit"
    ]
   },
   {
@@ -333,21 +335,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
